--- a/index.html
+++ b/index.html
@@ -149,6 +149,23 @@
     </div>
   </div>
 </section>
+<section id = "about-us">
+  <div class = "container">
+    <div class = "row">
+      <h1>ABOUT US</h1>
+      <div class = "separator"></div>
+    </div>
+    <div class = "row">
+      <div class = "col-md-6">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A rerum vel est quae accusamus adipisci odio reiciendis illo doloribus commodi dolores harum, quam ab aliquid aliquam perspiciatis, eveniet enim. Ipsam ea molestias et. Illo rem alias, distinctio labore, voluptatum quod.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A rerum vel est quae accusamus adipisci odio reiciendis illo doloribus commodi dolores harum, quam ab aliquid aliquam perspiciatis, eveniet enim. Ipsam ea molestias et. Illo rem alias, distinctio labore, voluptatum quod.</p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+          <span class="sr-only">70% Complete</span>
+        </div>
+</div>
+    
+
 
 
 
