--- a/index.html
+++ b/index.html
@@ -254,12 +254,234 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, sunt labore!</p>
     </div>
     <div class = "row">
-      <div class = "person-team">
-        <div class = "img-responsive">
-          <img src="img/team/1.jpg">
+      <div class = "col-md-3">
+        <div class = "person-team">
+          <div class = "avatar-team"></div>
+          <h4>Jane Doe</h4>
+          <h6>CEO / Founder</h6>
+          <div class = "separator"></div>
+          <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.</p>
+          <i class="fa fa-facebook-square"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-instagram"></i>
         </div>
+      </div>
+      <div class = "col-md-3">
+        <div class = "person-team">
+          <div class = "avatar-team"></div>
+          <h4>Jane Doe</h4>
+          <h6>CEO / Founder</h6>
+          <div class = "separator"></div>
+          <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.</p>
+          <i class="fa fa-facebook-square"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-instagram"></i>
+        </div>
+      </div>
+      <div class = "col-md-3">
+        <div class = "person-team">
+          <div class = "avatar-team"></div>
+          <h4>Jane Doe</h4>
+          <h6>CEO / Founder</h6>
+          <div class = "separator"></div>
+          <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.</p>
+          <i class="fa fa-facebook-square"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-instagram"></i>
+        </div>
+      </div>
+      <div class = "col-md-3">
+        <div class = "person-team">
+          <div class = "avatar-team"></div>
+          <h4>Jane Doe</h4>
+          <h6>CEO / Founder</h6>
+          <div class = "separator"></div>
+          <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.</p>
+          <i class="fa fa-facebook-square"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-instagram"></i>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+<section id = "price">
+  <div class = "container">
+    <div class = "row">
+      <h1>BEST PRICE GUARANTEED</h1>
+      <div class = "separator"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, sunt labore!</p>
+    </div>
+    <div class = "row">
+      <div class = "col-md-3">
+        <div class = "price-box">
+          <div class = "range-orange">
+            STARTER
+          </div>
+          <div class = "cost">
+            $ 10<span>/MO</span>
+            <h6>1 month FREE trial</h6>
+          </div>
+          <div class = "first-detail">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "first-detail">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "first-detail">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "general-btn">
+            Sign Up
+          </div>
+        </div>
+      </div>
+      <div class = "col-md-3">
+        <div class = "price-box">
+          <div class = "range">
+            STARTER
+          </div>
+          <div class = "cost">
+            $ 10<span>/MO</span>
+            <h6>1 month FREE trial</h6>
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "general-btn">
+            Sign Up
+          </div>
+        </div>
+      </div>
+      <div class = "col-md-3">
+        <div class = "price-box">
+          <div class = "range">
+            STARTER
+          </div>
+          <div class = "cost">
+            $ 10<span>/MO</span>
+            <h6>1 month FREE trial</h6>
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "general-btn">
+            Sign Up
+          </div>
+        </div>
+      </div>
+      <div class = "col-md-3">
+        <div class = "price-box">
+          <div class = "range">
+            STARTER
+          </div>
+          <div class = "cost">
+            $ 10<span>/MO</span>
+            <h6>1 month FREE trial</h6>
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "detail-trans">
+            2 GB Disk Space
+          </div>
+          <div class = "detail-bg">
+            10 GB Bandwith
+          </div>
+          <div class = "general-btn">
+            Sign Up
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section id = "our-clients">
+  <div class = "container">
+    <div class = "row first-row">
+      <h1>WHAT OUR CLIENTS SAY</h1>
+      <div class = "separator"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, sunt labore!</p>
+    </div>
+    <div class = "row">
+      <div class = "client-say">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recu a qui beatae perferendis<br>Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recu a qui beatae perferendis<br>Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.</p>
+        <h5>- Automotive company</h5>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "client-say">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recu a qui beatae perferendis<br>Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recu a qui beatae perferendis<br>Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.</p>
+        <h5>- XPedius Aerospace</h5>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "client-say">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recu a qui beatae perferendis<br>Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recu a qui beatae perferendis<br>Recu a qui beatae perferendis, natus animi eaque accusantium soluta culpa.</p>
+        <h5>- CKPit Solution</h5>
+      </div>
+   </div>
+  </div>
+</section>
+<section id = "intouch">
+  <div class = "row">
+    <div class = "container">
 
 
 
