--- a/index.html
+++ b/index.html
@@ -480,8 +480,74 @@
   </div>
 </section>
 <section id = "intouch">
-  <div class = "row">
-    <div class = "container">
+  <div class = "container">
+    <div class = "row">
+      <h1>GET IN TOUCH</h1>
+      <div class = "separator"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repudiandae voluptate, incidunt!</p>
+    </div>
+    <div class = "row">
+      <div class = "col-md-offset-2 col-md-8">
+        <input type="text" placeholder="Name*"><br>
+        <input type="text" placeholder="Email*"><br>
+        <input type="text" placeholder="Phone"><br>
+        <textarea placeholder="Message*"></textarea>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "general-btn">
+        Submit
+      </div>
+    </div>
+    <div class = "row">
+      <p class = "required">Required*</p>
+    </div>
+  </div>
+</section>
+<section id = "before-social">
+</section>
+<section id = "social">
+  <div class = "container">
+    <div class = "row">
+      <i class="fa fa-facebook-square"></i>
+      <i class="fa fa-twitter-square"></i>
+      <i class="fa fa-linkedin-square"></i>
+      <i class="fa fa-pinterest-square"></i>
+      <i class="fa fa-google-plus-square"></i>
+      <i class="fa fa-tumblr-square"></i>
+      <i class="fa fa-instagram"></i>
+    </div>
+  </div>
+</section>
+<footer>
+  <div class = "container">
+    <div class = "row">
+      <div class = "col-md-4">
+        <p>Visit Us</p>
+        <div class = "separator"></div>
+        <ul>
+          <li><i class="fa fa-location-arrow"></i>10 Lorem Ipsum Street</li>
+          <li><i class="fa fa-map-marker"></i>68123 Mannheim</li>
+          <li><i class="fa fa-flag"></i>Germany</li>
+        </ul>
+      </div>
+      <div class = "col-md-4">
+        <p>Write Us</p>
+        <div class = "separator"></div>
+        <ul>
+          <li><i class="fa fa-phone"></i>+49 621 123 321 123</li>
+          <li><i class="fa fa-envelope"></i>info@fabianbentz.de</li>
+          <li><i class="fa fa-print"></i>+49 621 123 321 124</li>
+        </ul>
+      </div>
+      <div class = "col-md-4">
+        <p>Newsletter</p>
+        <div class = "separator"></div>
+        <div class = "search-icon">
+      </div>
+    </div>
+  </div>
+</footer>
 
 
 
